--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -16,10 +16,23 @@
       "download": "Tải xuống",
       "downloadExcel": "Tải xuống Excel",
       "addNew": "Thêm mới",
-      "history": "Xem Lịch sử"
+      "history": "Xem Lịch sử",
+      "confirm": "Xác nhận"
     },
     "noData": "Không có dữ liệu",
-    "selectDateRange": "Chọn khoảng thời gian"
+    "selectDateRange": "Chọn khoảng thời gian",
+    "table": {
+      "of": "trên",
+      "selectedLines": "dòng được chọn",
+      "column": "Cột",
+      "showing": "Hiển thị",
+      "results": "kết quả",
+      "paging": "Số bản ghi mỗi trang"
+    },
+    "confirmDialog": {
+      "confirm": "Bạn có chắc chắn muốn tiếp tục không?",
+      "delete": "Thao tác này sẽ xóa vĩnh viễn dữ liệu các {{name}} đã chọn. Bạn có chắc chắn muốn tiếp tục?"
+    }
   },
   "actions": {
     "serviceActions": {
@@ -72,6 +85,7 @@
   "profile": {
     "personalProfile": "Hồ sơ cá nhân",
     "logout": "Đăng xuất",
+    "confirmLogout": "Bạn sẽ được đăng xuất khỏi hệ thống. Hành động này sẽ kết thúc phiên làm việc hiện tại của bạn",
     "manager": "Quản lý",
     "user": "Người dùng",
     "admin": "Admin",
@@ -373,6 +387,43 @@
       "common": "Chung",
       "system": "Hệ thống",
       "other": "Khác"
+    }
+  },
+  "building": {
+    "title": "Tòa nhà",
+    "response": {
+      "active": "Hoạt động",
+      "inactive": "Không hoạt động",
+      "buildingCode": "Mã tòa nhà",
+      "actions": "Thao tác",
+      "buildingName": "Tên tòa nhà",
+      "address": "Địa chỉ",
+      "buildingType": "Loại tòa nhà",
+      "actualNumberOfFloors": "Số tầng thực tế",
+      "numberOfFloorsForRent": "Số tầng cho thuê",
+      "description": "Mô tả",
+      "status": "Trạng thái",
+      "createdAt": "Ngày tạo",
+      "updatedAt": "Ngày cập nhật"
+    },
+    "filter": {
+      "status": "-- Trạng thái --",
+      "buildingType": "-- Loại tòa nhà --"
+    },
+    "errorFetch": "Có lỗi xảy ra khi tải tòa nhà",
+    "totalRooms": "Tổng số phòng",
+    "roomsAvailable": "Tổng số phòng trống",
+    "addOrUpdate": {
+      "buildingName": "Tên tòa nhà:",
+      "detailedAddress": "Địa chỉ chi tiết",
+      "placeholderAddress": "Hà Nội",
+      "selectBuilding": "-- Chọn loại tòa nhà --",
+      "buildingType": "Loại tòa nhà:",
+      "labelSelectBuildingType": "Xã/Phường",
+      "actualNumberOfFloors": "Số tầng thực tế:",
+      "numberOfFloorsForRent": "Số tầng cho thuê:",
+      "description": "Mô tả:",
+      "placeholderDescription": "Nhập mô tả"
     }
   }
 }
