--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -257,7 +257,7 @@
     "tenantStatus": {
       "renting": "Đang thuê",
       "returned": "Đã trả phòng",
-      "potential": "Tiềm năng",
+      "waitContract": "Chờ tạo hợp đồng",
       "locked": "Bị khóa",
       "cancelled": "Hủy bỏ"
     },
