update: update floor and room i18n

--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -494,7 +494,11 @@
       "floorName": "Tên tầng",
       "buildingName": "Tên tòa nhà",
       "acreage": "Diện tích (m²)",
+      "minAcreage": "Min acreage:",
+      "maxAcreage": "Max acreage:",
       "price": "Giá (VNĐ)",
+      "minPrice": "Giá từ:",
+      "maxPrice": "Giá đến:",
       "maximumPeople": "Số người tối đa",
       "roomType": "Loại phòng",
       "status": "Trạng thái",
@@ -516,8 +520,7 @@
       "floorId": "Tầng:",
       "acreage": "Diện tích (m²):",
       "price": "Giá (VNĐ):",
-      "minPrice": "Giá từ:",
-      "maxPrice": "Giá đến:",
+
       "maximumPeople": "Số người tối đa:",
       "roomType": "Loại phòng:",
       "status": "Trạng thái:",
