--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -495,7 +495,11 @@
       "floorName": "Floor name",
       "buildingName": "Building name",
       "acreage": "Acreage (m²)",
+      "minAcreage": "Min acreage:",
+      "maxAcreage": "Max acreage:",
       "price": "Price (VND)",
+      "minPrice": "Min price:",
+      "maxPrice": "Max price:",
       "maximumPeople": "Maximum people",
       "roomType": "Room type",
       "status": "Status",
@@ -517,8 +521,7 @@
       "floorId": "Floor:",
       "acreage": "Acreage (m²):",
       "price": "Price (VND):",
-      "minPrice": "Min price:",
-      "maxPrice": "Max price:",
+
       "maximumPeople": "Maximum people:",
       "roomType": "Room type:",
       "status": "Status:",
